@@ -17,6 +17,8 @@
  */
 package org.apache.cassandra.tools;
 
+import java.io.IOException;
+
 import io.airlift.airline.Command;
 
 @Command(name = "reloadssl", description = "Signals Cassandra to reload SSL certificates")
@@ -25,6 +27,13 @@ public class ReloadSslCertificates extends NodeTool.NodeToolCmd
     @Override
     public void execute(NodeProbe probe)
     {
-        probe.reloadSslCerts();
+        try
+        {
+            probe.reloadSslCerts();
+        }
+        catch (IOException e)
+        {
+            throw new RuntimeException("Failed to reload SSL certificates. Please check the SSL certificates", e);
+        }
     }
 }
